# JobSearch-Agent

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  __init__.py  main.py  main_api.py  pyproject.toml  requirements.txt  scraper_requirements.txt  start_api.py
.github/workflows/: ci.yml  deploy.yml
boss-collector-extension/: README.md  content.js  manifest.json
config/: cv_app_agent_config.yaml  file_config.yaml  job_app_agent_config.yaml  jobsearch_config.yaml  litellm_config.yaml
data/: cover_letter_template.txt  cv_template.txt
docs/: ADVANCED_CONFIGURATION.md  API.md  CHANGELOG.md  DATABASE_MIGRATION_COMPLETE.md  DATABASE_STORAGE_IMPLEMENTATION.md  DEVELOPMENT.md  GITHUB_UPLOAD_CHECKLIST.md  INTEGRATION_COMPLETE.md  LINKEDIN_SCRAPER.md  PIPELINE_CONSOLIDATION.md  README.md  STATUS_SUMMARY.md  TESTING.md  TODO.md  WEBSOCKET_IMPROVEMENTS.md
examples/: react-client-example.jsx
jobs/: job_bulk_text_1.txt  job_fraunhofer.json  job_posting.json  job_postings.json  job_postings_20250621_144455.json  job_postings_example.json
src/agents/: __init__.py  coverLetter_writer_adk.py  (+3 more)
tests/: demo_document_database.py  migrate_jobs_to_db.py  test_boss_collector_extension.py  test_boss_deepseek_flow.py  test_comprehensive.py  test_interview_log_api.py  test_interview_logs.py  test_job_database_quality.py  test_p0_hardening.py  test_p1_result_trust.py  test_p2_release_readiness.py  test_search_history_api.py  test_windows_async_fix.py  verify_windows_compatibility.py
web/: index.html  package-lock.json  package.json  vite.config.ts
(+62 files in other folders)
